2009-01-30  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/alert_manager.php: Fixed the page title. Show the
	right latest value in non-numeric modules. jQuery selectors fixed to
	work with many alerts.

	* extensions/update_manager/load_updatemanager.php: Fixed setup error
	messages.

	* include/functions_db.php: Added get_agent_module(). Added filter
	paremeter to get_agent_modules(). return_value_agent_module() renamed
	to get_agent_module_last_value() and do not transform to integer.
	Removed useless get_agent_modules_count().

2009-01-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* include/help/en/help_alert-matches.php,
	  include/help/en/help_serverlag.php,
	  include/help/en/help_time_stamp-comparation.php,
	  include/help/en/help_timesource.php: Modified help files.

	* include/help/es/help_alert-matches.php,
	  include/help/es/help_serverlag.php,
	  include/help/es/help_time_stamp-comparation.php,
	  include/help/es/help_timesource.php: Added Spanish help files.

2009-01-29  Esteban Sanchez  <estebans@artica.es>

	* include/auth/mysql.php: Style correction on switch statements.

	* include/functions_ui.php: Added a flag to
	print_alert_template_example() to allow values replacement.

	* include/functions_reporting.php: Fixed a notice message for
	unitialized values.

	* operation/events/events.php: get_users() result can not be passed
	directly to print_select().

	* pandoradb_migrate_20_to_21.sql: Style correction. Please, put each
	alter table in a row so it can be easier to read.

2009-01-28  Sancho Lerena  <slerena@artica.es>

	* estado_grupo.php: Async modules and keepalive module don't show as down
	anymore.

2009-01-28  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/functions.php, operation/agentes/sla_view.php,
	  operation/agentes/ver_agente.php,
	  operation/reporting/reporting_xml.php,
	  operation/reporting/reporting_viewer.php: Fixed typo.

	* include/languages/index.pot: Updated PO template.
